# ACEPliot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  Doxyfile  README.md
benchmarks/aerial_manipulation_benchmark/: package.xml  setup.cfg  setup.py
benchmarks/aerial_manipulation_benchmark/aerial_manipulation_benchmark/: __init__.py
benchmarks/aerial_manipulation_benchmark/launch/: real_aerial_manipulation_benchmark.launch.py  sim_aerial_manipulation_benchmark.launch.py
benchmarks/aerial_manipulation_benchmark/test/: __init__.py  test_package.py
benchmarks/figure8_tracking_benchmark/: package.xml  setup.cfg  setup.py
benchmarks/figure8_tracking_benchmark/figure8_tracking_benchmark/: __init__.py
benchmarks/figure8_tracking_benchmark/launch/: real_ee_figure8_tracking_benchmark.launch.py  real_px4_figure8_tracking_benchmark.launch.py  sim_ee_figure8_tracking_benchmark.launch.py  sim_px4_figure8_tracking_benchmark.launch.py
benchmarks/figure8_tracking_benchmark/test/: __init__.py  test_package.py
benchmarks/velocity_tracking_benchmark/: package.xml  setup.cfg  setup.py
benchmarks/velocity_tracking_benchmark/config/: real_velocity_tracking_benchmark.yaml  sim_velocity_tracking_benchmark.yaml
benchmarks/velocity_tracking_benchmark/launch/: real_velocity_tracking_benchmark.launch.py  sim_velocity_tracking_benchmark.launch.py
benchmarks/velocity_tracking_benchmark/test/: __init__.py  test_profile.py
benchmarks/velocity_tracking_benchmark/velocity_tracking_benchmark/: __init__.py  node.py  profile.py
commanders/am_ee_pose_commander/: CMakeLists.txt  README.md  package.xml
commanders/am_ee_pose_commander/config/: sim_am_ee_pose_commander.yaml
commanders/am_ee_pose_commander/launch/: real_am_ee_pose_commander.launch.py  sim_am_ee_pose_commander.launch.py
commanders/am_ee_pose_commander/src/: am_ee_pose_commander_node.cpp  arm_sync.cpp  offboard_conversion.cpp  policy_contract.cpp  vehicle_state.cpp  x500_arm_kinematics.cpp
commanders/am_ee_pose_commander/test/: test_arm_sync.cpp  test_policy_contract.cpp  test_vehicle_state.cpp  test_x500_arm_kinematics.cpp
libraries/policy_inference/: CMakeLists.txt  package.xml
libraries/policy_inference/src/: onnx_policy.cpp  recurrent_state.cpp
libraries/policy_inference/test/: test_onnx_policy.cpp  test_recurrent_state.cpp
px4_external_modes/am_position_mode/: CMakeLists.txt  package.xml
px4_external_modes/am_position_mode/config/: real_am_position.yaml  real_am_position_ctbr.yaml  real_am_position_motor.yaml  sim_am_position.yaml  sim_am_position_ctbr.yaml  sim_am_position_motor.yaml
px4_external_modes/am_position_mode/include/: am_position_ctbr_mode.hpp  am_position_mode.hpp  am_position_motor_mode.hpp  am_position_offboard_reference.hpp  arm_robot_data.hpp  flight_logger.hpp  observation_buffer.hpp
px4_external_modes/am_position_mode/launch/: real_am_position.launch.py  real_am_position_ctbr.launch.py  real_am_position_motor.launch.py  sim_am_position.launch.py  sim_am_position_ctbr.launch.py  sim_am_position_motor.launch.py
px4_external_modes/am_position_mode/src/: am_position_ctbr_mode.cpp  am_position_mode.cpp  am_position_motor_mode.cpp  am_position_offboard_reference.cpp  arm_robot_data.cpp  main.cpp  main_ctbr.cpp  main_motor.cpp  math.cpp
px4_external_modes/am_position_mode/test/: test_am_position_ctbr_mode.cpp  test_am_position_mode.cpp  test_am_position_offboard_reference.cpp
px4_external_modes/flying_hand_control_common/: CMakeLists.txt  package.xml
px4_external_modes/flying_hand_control_common/src/: controller_worker.cpp  external_mode.cpp  wrench_setpoint_type.cpp
px4_external_modes/flying_hand_control_common/test/: test_controller_worker.cpp  test_external_mode.cpp
px4_external_modes/flying_hand_fully_actuated_mode/: CMakeLists.txt  README.md  package.xml
px4_external_modes/flying_hand_fully_actuated_mode/config/: real_flying_hand_fully_actuated_shadow.yaml
px4_external_modes/flying_hand_fully_actuated_mode/launch/: real_flying_hand_fully_actuated.launch.py  real_flying_hand_fully_actuated_shadow.launch.py
px4_external_modes/flying_hand_fully_actuated_mode/src/: dh_kinematics.cpp  flying_hand_fully_actuated_controller.cpp  fully_actuated_core.cpp  main.cpp  paper_l1_adaptive.cpp  whole_body_solver.cpp
px4_external_modes/flying_hand_fully_actuated_mode/test/: test_dh_kinematics.cpp  test_fully_actuated_controller.cpp  test_fully_actuated_core.cpp  test_paper_l1_adaptive.cpp  test_whole_body_solver.cpp
px4_external_modes/flying_hand_fully_actuated_mode/tools/: generate_solver.py
px4_external_modes/flying_hand_mode/: CMakeLists.txt  README.md  package.xml
px4_external_modes/flying_hand_mode/config/: real_flying_hand_fully_actuated_shadow.yaml  (+3 more)
px4_external_modes/flying_hand_quadrotor_mode/: CMakeLists.txt  README.md  package.xml
px4_external_modes/rl_base_mode/: CMakeLists.txt  package.xml
px4_external_modes/rl_mc_arm_position_mode/: CMakeLists.txt  README.md  package.xml  test_rl_mc_arm_position_ctbr_mode.cpp
px4_external_modes/rl_mode_utils/: CMakeLists.txt  package.xml
px4_state_converter/: CMakeLists.txt  package.xml
px4_state_converter/config/: fast_lio_config.yaml  imu_config.yaml  lidar_config.yaml  mavlink_router_serial.conf.in  mavlink_router_udp.conf.in  nokov_mocap_config.yaml
px4_state_converter/include/: common.hpp
px4_state_converter/launch/: airlink.launch.py  generic_odometry.launch.py  gt_odometry.launch.py  odometry.launch.py
px4_state_converter/scripts/: generate_mavlink_router_config.py
px4_state_converter/src/: gt_odom_from_px4_node.cpp  gt_odom_to_px4_node.cpp  imu_from_px4_node.cpp  odom_from_px4_node.cpp  odom_to_px4_node.cpp
trajectory_generators/aerial_manipulator_commander/: CMakeLists.txt  package.xml
trajectory_generators/arm_trajectory_commander/: CMakeLists.txt  package.xml
trajectory_generators/figure8_trajectory/: package.xml  setup.cfg  setup.py
trajectory_generators/figure8_trajectory_mode/: CMakeLists.txt  package.xml
trajectory_generators/px4_velocity_commander/: CMakeLists.txt  package.xml
(+246 files in other folders)
