<?xml version="1.0"?>
<package format="3">
  <name>aerial_manipulation_benchmark</name>
  <version>0.1.0</version>
  <description>Combined velocity tracking and arm motion benchmark launch package.</description>
  <maintainer email="dragonboat_xxy@163.com">Xiangyuan Xie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>arm_motion_benchmark</exec_depend>
  <exec_depend>benchmark_reporting</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>velocity_tracking_benchmark</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
