<?xml version="1.0"?>
<package format="3">
  <name>am_ee_pose_commander</name>
  <version>0.1.0</version>
  <description>ACELab AM EE Pose upper-policy commander for the PX4-native AM Offboard mode.</description>
  <maintainer email="dragonboat_xxy@163.com">Xiangyuan Xie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>policy_inference</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
