<?xml version="1.0"?>
<package format="3">
  <name>flying_hand_control_common</name>
  <version>0.1.0</version>
  <description>Shared ROS 2 runtime and safety primitives for Flying Hand external modes.</description>
  <maintainer email="dragonboat_xxy@163.com">Xiangyuan Xie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
